2000-05-15  Ken Raeburn  <raeburn@mit.edu>

	* krcp.c (main): Fix some conditionalizations to make proper
	indentation easier.

	* kcmd.c (encivec_i, encivec_o): New variables replace old single
	variable encivec.
	(rcmd_stream_init_krb5): New argument am_client, used to
	initialize both ivec values.
	* krcp.c (main, answer_auth): Pass new argument.
	* krlogin.c (main): Ditto.
	* krlogind.c (recvauth): Ditto.
	* krsh.c (main): Ditto.
	* krshd.c (recvauth): Ditto.

	* defines.h (OPTS_FORWARD_CREDS, OPTS_FORWARDABLE_CREDS): Change
	numbers so they don't conflict with AP_OPTS_USE_SUBKEY.
	* kcmd.c (kcmd): New argument authconp, used to return the auth
	context to the caller if desired.
	* krlogin.c (auth_context): New variable.
	(main): Request a subkey from sendauth.  Get the auth context from
	kcmd so we can retrieve the subkey.  If non-DES session key is
	being used, pass the subkey to rcmd_stream_init_krb5 instead of
	the session key; fail if no subkey is found and encryption is
	required.
	* krlogind.c (recvauth): If a non-DES session key is being used,
	pass the client-provided subkey to rcmd_stream_init_krb5.
	* krcp.c (main): Set up and use subkey as above.
	* krsh.c (main): Set up and use subkey as above.
	* krshd.c (recvauth): Accept and use subkey as above.

2000-05-08  Ken Raeburn  <raeburn@mit.edu>

	* v4rcp.c (main, case 'k'): Make sure krb_realm is
	null-terminated.

2000-04-27  Nalin Dahyabhai  <nalin@redhat.com>

	* krlogin.c (main): Don't overflow buffer "term".
	* krshd.c (doit): Don't overflow buffer "cmdbuf".
	* login.c (afs_login): Don't overflow buffer "aklog_path".

2000-03-24  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Check for alpha*-dec-osf* instead of
	alpha-dec-osf*.

2000-03-15  Ken Raeburn  <raeburn@mit.edu>
	    Mark D. Roth  <roth@uiuc.edu>

	* login.c (update_ref_count): Copy passwd info before calling
	getuserattr, to keep data from getting clobbered.  Patch from Mark
	Roth.

2000-02-28  Ken Raeburn  <raeburn@mit.edu>
